# chat-app

./: LICENSE  README.md  docker-compose.yml
chat-client/: .dockerignore  .gitignore  AUTHORS  Dockerfile  LICENSE  README.md  meson.build
chat-client/docs/: README.md
chat-client/src/: app.c  app.h  banner.c  banner.h  command_parser.c  command_parser.h  json_message.c  json_message.h  line_buffer.c  line_buffer.h  main.c  net.c  net.h  protocol.c  protocol.h  server_event.c  server_event.h
chat-server/: .dockerignore  .gitignore  Dockerfile  Makefile  go.mod
chat-server/cmd/chat-server/: main.go
chat-server/docs/: README.md
chat-server/internal/config/: config.go
chat-server/internal/framing/: line_reader.go  line_writing.go
chat-server/internal/hub/: hub.go
chat-server/internal/protocol/: decode.go  encode.go  types.go
chat-server/internal/server/: server.go  tcp_client.go
